--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,9 @@
-# Server Configuration
-PORT=3000
-NODE_ENV=development
+# Google Apps Script — Large Event Weather Dashboard
+# No server-side env vars needed; config is in Code.gs constants.
+# This file is kept for reference only.
 
-# NOAA API (optional - public endpoints available)
-NOAA_API_TOKEN=your_token_here
+# Synoptic API key (hardcoded in Code.gs — move to PropertiesService for production)
+SYNOPTIC_API_KEY=e0fb17ad65504848934b1f1ece0c78f8
 
-# Weather API Keys (if using additional services)
-# WEATHER_API_KEY=your_key_here
-
-# Data Update Intervals (milliseconds)
-WEATHER_UPDATE_INTERVAL=300000
-RADAR_UPDATE_INTERVAL=120000
-SATELLITE_UPDATE_INTERVAL=300000
-
-# GRIB Data Configuration
-GRIB_MODEL=HRRR
-GRIB_UPDATE_INTERVAL=3600000
-
-# Logging
-LOG_LEVEL=info
+# Google Apps Script project ID (for clasp CLI)
+SCRIPT_ID=YOUR_SCRIPT_ID_HERE
